Added somo features. It's working.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="latitude">Latitud</string>
     <string name="longitude">Longitud</string>
 
+    <string name="button">Guardar Datos</string>
+
 </resources>
